# dpe

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/: architect.md  backend.md  datascience.md  devops.md  frontend.md  qa.md  scraping.md
config/: hypotheses.yaml  settings.py
src/cleaning/: clean_dpe.py  cli.py
src/comparison/: cli.py  compare.py  export.py
src/extraction/: ademe_client.py  cli.py  storage.py
src/presentation/: cli.py  generate_report.py
tests/test_cleaning/: test_clean_dpe.py
tests/test_comparison/: test_compare.py
tests/test_extraction/: test_ademe_client.py  test_storage.py
tests/test_presentation/: test_generate_report.py  test_pipeline_integration.py
